--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "symfony/css-selector": "^6.4",
+        "symfony/dom-crawler": "^6.4",
         "weidner/goutte": "^2.2"
     },
     "require-dev": {
